# large_tools

./: pyproject.toml
src/llama_local/: llama_local.py
src/qdrant_pdf/: qdrant_pdf.py  qdrant_pdf_test.py
src/qdrantlib/: qdrantlib.py
